--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
-  <title>Angelthon — red/black neon</title>
-  <meta name="description" content="Angelthon — красно-черный неон с переливами, блюрами и стеклянными панелями." />
+  <title>Angelthon — On Top</title>
+  <meta name="description" content="Angelthon — Created for those who want to dominate." />
   <style>
     :root {
       --bg: #0a0a0d;
@@ -271,7 +271,7 @@
         <div class="logo" aria-hidden="true"></div>
         <div>
           <h1>Angelthon</h1>
-          <div class="sub">Красно‑черный неон: переливания, блюры и стекло</div>
+          <div class="sub">Angelthon = The best way to win</div>
         </div>
       </div>
     </div>
@@ -281,10 +281,10 @@
   <section class="hero">
     <div class="wrap hero-grid">
       <div class="hero-left">
-        <h2 class="title">Создано для тех, кто любит <span class="em">свет в темноте</span>.</h2>
+        <h2 class="title">The cheats support <span class="em">by suvcult</span>.</h2>
         <p class="desc">
-          Живой фон с мягкими переливами, стеклянные панели с неоновым свечением
-          и микродвижение деталей — все, чтобы страница дышала и оставалась быстрой.
+          Support 24/7
+          Low price 
         </p>
         <div class="cta-row">
           <button class="btn primary" id="primaryAction">Начать</button>
@@ -306,20 +306,20 @@
   <section class="wrap">
     <div class="cards">
       <article class="card tilt">
-        <h3>Переливы</h3>
-        <p>Градиенты движутся как дыхание: плавно, ненавязчиво, без рывков.</p>
+        <h3>Support 24/7</h3>
+        <p>Moderators are always here to help you on our Discord server.</p>
       </article>
       <article class="card tilt">
-        <h3>Блюры</h3>
-        <p>Стеклянные панели дают глубину, не перегружая детали.</p>
+        <h3>Low prices</h3>
+        <p>Low prices = Available to everyone
       </article>
       <article class="card tilt">
-        <h3>Неон</h3>
-        <p>Красные акценты светятся, подчеркивая важное.</p>
+        <h3>Comfort</h3>
+        <p>Comfort is the key to enjoyable use.</p>
       </article>
       <article class="card tilt">
-        <h3>Легкость</h3>
-        <p>Чистый CSS/JS без библиотек, адаптив и производительность.</p>
+        <h3>Ease to use</h3>
+        <p>Any of our products are easy to use..</p>
       </article>
     </div>
   </section>
@@ -327,8 +327,8 @@
   <!-- Footer -->
   <footer>
     <div class="wrap foot">
-      <div class="small">© Angelthon. Сделано с неоновым теплом.</div>
-      <div class="small">GitHub Pages ready.</div>
+      <div class="small">© Angelthon. cheat makers.</div>
+      <div class="small">Undetected Cheats.</div>
     </div>
   </footer>
 
