--- a/index.html
+++ b/index.html
@@ -1,384 +1,138 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="color-scheme" content="dark" />
-  <title>Angelthon — On Top</title>
-  <meta name="description" content="Angelthon — Created for those who want to dominate." />
+  <meta charset="UTF-8">
+  <title>Shop — Пример</title>
   <style>
-    :root {
-      --bg: #0a0a0d;
-      --fg: #e8e8ea;
-      --muted: #a9a9b2;
-      --red: #ff2a4a;
-      --red-2: #ff5a7a;
-      --red-3: #ff0033;
-      --glass: rgba(255, 255, 255, 0.06);
-      --border: rgba(255, 255, 255, 0.12);
-      --shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
-    }
-
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
     body {
+      background: #111;
+      color: #eee;
+      font-family: sans-serif;
       margin: 0;
-      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial, "Noto Sans";
-      background: var(--bg);
-      color: var(--fg);
-      overflow-x: hidden;
+      padding: 0;
     }
-
-    /* Animated background: gradient flow + particles + subtle noise */
-    .bg {
-      position: fixed;
-      inset: 0;
-      z-index: -3;
-      overflow: hidden;
-      filter: saturate(1.1) contrast(1.05);
-    }
-    .bg::before {
-      content: "";
-      position: absolute;
-      inset: -20% -20%;
-      background:
-        radial-gradient(50% 60% at 20% 30%, rgba(255, 0, 51, 0.35), transparent 60%),
-        radial-gradient(40% 52% at 80% 20%, rgba(255, 50, 100, 0.25), transparent 60%),
-        radial-gradient(60% 50% at 50% 80%, rgba(255, 80, 120, 0.22), transparent 60%);
-      filter: blur(60px);
-      animation: flow 22s ease-in-out infinite alternate;
-      transform: translateZ(0);
-    }
-    @keyframes flow {
-      0% { transform: translate(0, 0) scale(1); }
-      50% { transform: translate(-4%, 2%) scale(1.05); }
-      100% { transform: translate(4%, -2%) scale(1.1); }
-    }
-
-    .particles {
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-      z-index: -2;
-    }
-    .dot {
-      position: absolute;
-      width: 2px; height: 2px;
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 50%;
-      filter: blur(0.5px);
-      animation: float 14s linear infinite;
-    }
-    @keyframes float {
-      from { transform: translateY(0) translateX(0); opacity: 0.2; }
-      50%  { transform: translateY(-40px) translateX(10px); opacity: 0.35; }
-      to   { transform: translateY(0) translateX(0); opacity: 0.2; }
-    }
-
-    .noise {
-      position: absolute; inset: 0; z-index: -1;
-      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="140" height="140"><filter id="n"><feTurbulence type="fractalNoise" baseFrequency="0.95" numOctaves="1" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23n)" opacity="0.025"/></svg>');
-      mix-blend-mode: soft-light;
-      opacity: 0.35;
-    }
-
-    /* Header */
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      backdrop-filter: blur(12px);
-      background: linear-gradient(180deg, rgba(10, 10, 13, 0.65), rgba(10, 10, 13, 0.35));
-      border-bottom: 1px solid var(--border);
-    }
-    .wrap { max-width: 1200px; margin: 0 auto; padding: 16px 20px; }
-    .brand {
-      display: flex; align-items: center; gap: 14px;
-    }
-    .logo {
-      width: 40px; height: 40px; border-radius: 12px;
-      background: radial-gradient(120% 120% at 30% 30%, var(--red), var(--red-2) 45%, #3a000a 90%);
-      box-shadow: 0 0 24px rgba(255, 42, 74, 0.45), inset 0 0 20px rgba(255, 42, 74, 0.35);
-      position: relative;
-      overflow: hidden;
-    }
-    .logo::after {
-      content: "";
-      position: absolute; inset: -40%;
-      background: conic-gradient(from 120deg, rgba(255,255,255,0.12), transparent 30%, rgba(255,255,255,0.06), transparent 60%);
-      animation: spin 12s linear infinite;
-    }
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-    h1 {
-      margin: 0;
-      font-size: clamp(1.2rem, 2.5vw, 1.8rem);
-      letter-spacing: 0.6px;
-    }
-    .sub {
-      color: var(--muted);
-      font-size: 0.95rem;
-    }
-
-    /* Hero */
-    .hero {
-      padding: 64px 20px 32px;
-    }
-    .hero-grid {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      gap: 24px;
-      align-items: center;
-    }
-    .hero-left {
-      grid-column: span 6;
-    }
-    .hero-right {
-      grid-column: span 6;
-      position: relative;
-      min-height: 320px;
-    }
-
-    .title {
-      font-size: clamp(2rem, 6vw, 4rem);
-      line-height: 1.05;
-      margin: 0 0 12px;
-      text-shadow: 0 0 12px rgba(255, 42, 74, 0.25);
-    }
-    .em {
-      color: var(--red);
-      filter: drop-shadow(0 0 18px rgba(255, 42, 74, 0.45));
-    }
-    .desc {
-      color: var(--muted);
-      font-size: clamp(1rem, 2.2vw, 1.15rem);
-      max-width: 65ch;
-    }
-
-    .cta-row {
-      display: flex; gap: 14px; flex-wrap: wrap; margin-top: 22px;
-    }
-    .btn {
-      appearance: none; border: 0; cursor: pointer;
-      padding: 12px 18px; border-radius: 12px;
-      background: linear-gradient(180deg, #2c0b12, #17060a);
-      color: var(--fg); font-weight: 600; letter-spacing: 0.3px;
-      box-shadow: var(--shadow), 0 0 20px rgba(255, 42, 74, 0.35) inset;
-      transition: transform .18s ease, box-shadow .3s ease, background .3s ease;
-    }
-    .btn.primary {
-      background: linear-gradient(180deg, var(--red), var(--red-3));
-      color: #fff;
-      box-shadow: 0 12px 28px rgba(255, 42, 74, 0.45);
-    }
-    .btn:hover { transform: translateY(-2px); }
-    .btn:active { transform: translateY(0); filter: brightness(0.95); }
-
-    /* Glass cards */
     .cards {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
       padding: 20px;
-      display: grid; gap: 22px;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      justify-content: center;
     }
     .card {
+      width: 200px;
+      background: #222;
+      border-radius: 8px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
       position: relative;
-      border-radius: 16px;
-      padding: 18px;
-      background: linear-gradient(180deg, var(--glass), rgba(255,255,255,0.03));
-      border: 1px solid var(--border);
-      backdrop-filter: blur(16px);
-      box-shadow: var(--shadow);
-      transform-style: preserve-3d;
-      transition: transform .2s ease, box-shadow .3s ease;
-      will-change: transform;
+    }
+    .card img {
+      width: 100%;
+      display: block;
+      transition: transform 0.3s ease;
     }
     .card:hover {
-      box-shadow: 0 18px 40px rgba(255, 42, 74, 0.25), var(--shadow);
+      transform: scale(1.05);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.7);
     }
-    .card h3 {
-      margin: 0 0 8px; font-size: 1.1rem;
-      text-shadow: 0 0 10px rgba(255, 42, 74, 0.22);
+    .card:hover img {
+      transform: scale(1.1);
     }
-    .card p { margin: 0; color: var(--muted); }
-
-    /* Decorative rings on the right */
-    .rings {
-      position: absolute; inset: 0;
-      display: grid; place-items: center;
-      filter: blur(0.2px);
+    .card .info {
+      padding: 10px;
+      text-align: center;
     }
-    .ring {
-      position: absolute;
-      width: 50%; aspect-ratio: 1;
-      border-radius: 50%;
-      border: 2px solid rgba(255, 42, 74, 0.25);
-      box-shadow: 0 0 50px rgba(255, 42, 74, 0.25);
-      animation: pulse 9s ease-in-out infinite;
+    .features {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      padding: 20px 0;
     }
-    .ring.r2 { width: 70%; animation-delay: -3s; }
-    .ring.r3 { width: 90%; animation-delay: -6s; }
-    @keyframes pulse {
-      0%   { transform: scale(0.95); opacity: 0.6; }
-      50%  { transform: scale(1.05); opacity: 0.9; }
-      100% { transform: scale(0.95); opacity: 0.6; }
+    .feature {
+      padding: 5px 10px;
+      background: #333;
+      border-radius: 4px;
+      font-size: 12px;
     }
-
-    /* Footer */
-    footer {
-      border-top: 1px solid var(--border);
-      backdrop-filter: blur(8px);
-      background: linear-gradient(180deg, rgba(10, 10, 13, 0.3), rgba(10, 10, 13, 0.65));
-      padding: 24px 20px 40px;
-      margin-top: 16px;
+    /* Стили для detail view */
+    .detail {
+      display: none;
+      padding: 20px;
+      color: #eee;
     }
-    .foot {
-      display: flex; justify-content: space-between; align-items: center; gap: 16px;
-      flex-wrap: wrap;
+    .detail.active {
+      display: block;
     }
-    .small { color: var(--muted); font-size: 0.95rem; }
-
-    /* Cursor spotlight */
-    .spotlight {
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      z-index: -1;
-      background: radial-gradient(250px 250px at var(--mx, 50%) var(--my, 50%), rgba(255, 42, 74, 0.15), transparent 60%);
-      transition: background-position .05s linear;
+    .detail img {
+      max-width: 100%;
+      border-radius: 8px;
     }
-
-    /* Responsive */
-    @media (max-width: 900px) {
-      .hero-grid { grid-template-columns: 1fr; }
-      .hero-left, .hero-right { grid-column: span 12; }
-      .hero { padding-top: 44px; }
+    .detail .buy-btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #ff2e63;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+    }
+    .back-btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 5px 10px;
+      background: #444;
+      color: #ccc;
+      text-decoration: none;
+      border-radius: 4px;
     }
   </style>
 </head>
 <body>
-  <!-- Animated background -->
-  <div class="bg">
-    <div class="particles" id="particles"></div>
-    <div class="noise"></div>
+
+  <div class="cards" id="cards">
+    <!-- Пример карточки 1 -->
+    <div class="card" data-game="game1" data-title="Game One" data-img="https://via.placeholder.com/600x400" data-price7="10" data-price30="25" data-price365="80">
+      <img src="https://via.placeholder.com/600x400" alt="">
+      <div class="info">
+        <h3>Game One</h3>
+      </div>
+    </div>
+    <!-- Можно добавить больше карточек -->
   </div>
-  <div class="spotlight" id="spotlight"></div>
 
-  <!-- Header -->
-  <header>
-    <div class="wrap">
-      <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
-        <div>
-          <h1>Angelthon</h1>
-          <div class="sub">Angelthon = The best way to win</div>
-        </div>
-      </div>
+  <div class="detail" id="detail">
+    <h2 id="detail-title"></h2>
+    <img id="detail-img" src="" alt="">
+    <div id="price-options">
+      <p>7 дней — <span id="price7"></span>$</p>
+      <p>30 дней — <span id="price30"></span>$</p>
+      <p>365 дней — <span id="price365"></span>$</p>
     </div>
-  </header>
-
-  <!-- Hero -->
-  <section class="hero">
-    <div class="wrap hero-grid">
-      <div class="hero-left">
-        <h2 class="title">The cheats support <span class="em">by suvcult</span>.</h2>
-        <p class="desc">
-          Support 24/7
-          Low price 
-        </p>
-        <div class="cta-row">
-          <button class="btn primary" id="primaryAction">Начать</button>
-          <button class="btn" id="secondaryAction">Подробнее</button>
-        </div>
-      </div>
-
-      <div class="hero-right">
-        <div class="rings">
-          <div class="ring r1"></div>
-          <div class="ring r2"></div>
-          <div class="ring r3"></div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Cards -->
-  <section class="wrap">
-    <div class="cards">
-      <article class="card tilt">
-        <h3>Support 24/7</h3>
-        <p>Moderators are always here to help you on our Discord server.</p>
-      </article>
-      <article class="card tilt">
-        <h3>Low prices</h3>
-        <p>Low prices = Available to everyone
-      </article>
-      <article class="card tilt">
-        <h3>Comfort</h3>
-        <p>Comfort is the key to enjoyable use.</p>
-      </article>
-      <article class="card tilt">
-        <h3>Ease to use</h3>
-        <p>Any of our products are easy to use..</p>
-      </article>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="wrap foot">
-      <div class="small">© Angelthon. cheat makers.</div>
-      <div class="small">Undetected Cheats.</div>
-    </div>
-  </footer>
+    <a href="https://discord.gg/yourfake" target="_blank" class="buy-btn">Купить</a>
+    <br>
+    <a href="#" class="back-btn" id="back-btn">Назад</a>
+  </div>
 
   <script>
-    // Cursor spotlight
-    const spotlight = document.getElementById('spotlight');
-    window.addEventListener('pointermove', (e) => {
-      const x = (e.clientX / window.innerWidth) * 100 + '%';
-      const y = (e.clientY / window.innerHeight) * 100 + '%';
-      spotlight.style.setProperty('--mx', x);
-      spotlight.style.setProperty('--my', y);
-    });
-
-    // Particles
-    const particles = document.getElementById('particles');
-    const COUNT = Math.min(120, Math.floor(window.innerWidth / 10));
-    for (let i = 0; i < COUNT; i++) {
-      const d = document.createElement('div');
-      d.className = 'dot';
-      d.style.left = Math.random() * 100 + '%';
-      d.style.top = Math.random() * 100 + '%';
-      d.style.animationDuration = (10 + Math.random() * 8) + 's';
-      d.style.opacity = (0.15 + Math.random() * 0.3);
-      particles.appendChild(d);
-    }
-
-    // 3D tilt for cards
-    const cards = document.querySelectorAll('.tilt');
-    cards.forEach(card => {
-      const strength = 10; // degrees
-      card.addEventListener('pointermove', (e) => {
-        const rect = card.getBoundingClientRect();
-        const x = (e.clientX - rect.left) / rect.width;
-        const y = (e.clientY - rect.top) / rect.height;
-        const rx = (0.5 - y) * strength;
-        const ry = (x - 0.5) * strength;
-        card.style.transform = `perspective(600px) rotateX(${rx}deg) rotateY(${ry}deg) translateZ(0)`;
-      });
-      card.addEventListener('pointerleave', () => {
-        card.style.transform = 'perspective(600px) rotateX(0) rotateY(0)';
+    document.querySelectorAll('.card').forEach(card => {
+      card.addEventListener('click', () => {
+        const detail = document.getElementById('detail');
+        document.getElementById('detail-title').innerText = card.dataset.title;
+        document.getElementById('detail-img').src = card.dataset.img;
+        document.getElementById('price7').innerText = card.dataset.price7;
+        document.getElementById('price30').innerText = card.dataset.price30;
+        document.getElementById('price365').innerText = card.dataset.price365;
+        document.getElementById('cards').style.display = 'none';
+        detail.classList.add('active');
       });
     });
-
-    // CTA actions (demo)
-    document.getElementById('primaryAction').addEventListener('click', () => {
-      window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
-    });
-    document.getElementById('secondaryAction').addEventListener('click', () => {
-      alert('Angelthon — эстетика красного неона. Настроим под твой контент.');
+    document.getElementById('back-btn').addEventListener('click', e => {
+      e.preventDefault();
+      document.getElementById('cards').style.display = '';
+      document.getElementById('detail').classList.remove('active');
     });
   </script>
+
 </body>
 </html>
